@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libqcow],
- [20140317],
+ [20140328],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
