@@ -276,9 +276,23 @@ ssize_t libqcow_file_read_buffer(
 
 /* Reads (media) data at a specific offset
  * Returns the number of bytes read or -1 on error
+ *
+ * This function is deprecated use libqcow_file_read_buffer_at_offset instead
  */
+LIBQCOW_DEPRECATED \
 LIBQCOW_EXTERN \
 ssize_t libqcow_file_read_random(
+         libqcow_file_t *file,
+         void *buffer,
+         size_t buffer_size,
+         off64_t offset,
+         libqcow_error_t **error );
+
+/* Reads (media) data at a specific offset
+ * Returns the number of bytes read or -1 on error
+ */
+LIBQCOW_EXTERN \
+ssize_t libqcow_file_read_buffer_at_offset(
          libqcow_file_t *file,
          void *buffer,
          size_t buffer_size,
@@ -305,7 +319,7 @@ ssize_t libqcow_file_write_buffer(
  * Returns the number of input bytes written, 0 when no longer bytes can be written or -1 on error
  */
 LIBQCOW_EXTERN \
-ssize_t libqcow_file_write_random(
+ssize_t libqcow_file_write_buffer_at_offset(
          libqcow_file_t *file,
          const void *buffer,
          size_t buffer_size,
